Contact details setup

--- a/ContactsApp/Base.lproj/Main.storyboard
+++ b/ContactsApp/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
+        <!--Main Navigation Controller-->
         <scene sceneID="JSR-IM-tUd">
             <objects>
-                <navigationController id="JY3-hu-Q0f" sceneMemberID="viewController">
+                <navigationController id="JY3-hu-Q0f" customClass="MainNavigationController" customModule="ContactsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="jXQ-4l-uq2">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -130,6 +130,152 @@
                 </customObject>
             </objects>
             <point key="canvasLocation" x="-398" y="-30"/>
+        </scene>
+        <!--Contact Details Table View Controller-->
+        <scene sceneID="x6Y-fx-kmI">
+            <objects>
+                <tableViewController storyboardIdentifier="ContactDetailsTVC" id="YLJ-JC-unB" customClass="ContactDetailsTableViewController" customModule="ContactsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Yk0-zV-dMI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="X1t-2X-Kd6">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="195"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dN4-j8-LBI">
+                                    <rect key="frame" x="137.5" y="16" width="100" height="100"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="100" id="K39-hW-awI"/>
+                                        <constraint firstAttribute="width" constant="100" id="O1o-3T-q2M"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.59999999999999998" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uJG-8w-LFn">
+                                    <rect key="frame" x="16" y="124" width="343" height="20"/>
+                                    <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="uJG-8w-LFn" secondAttribute="trailing" constant="16" id="2rF-8k-53v"/>
+                                <constraint firstItem="uJG-8w-LFn" firstAttribute="leading" secondItem="X1t-2X-Kd6" secondAttribute="leading" constant="16" id="4tB-lg-gOY"/>
+                                <constraint firstItem="uJG-8w-LFn" firstAttribute="top" secondItem="dN4-j8-LBI" secondAttribute="bottom" constant="8" id="hDc-Bw-cGT"/>
+                                <constraint firstItem="dN4-j8-LBI" firstAttribute="centerX" secondItem="X1t-2X-Kd6" secondAttribute="centerX" id="psQ-om-3Ag"/>
+                                <constraint firstItem="dN4-j8-LBI" firstAttribute="top" secondItem="X1t-2X-Kd6" secondAttribute="top" constant="16" id="qQk-rN-Fyp"/>
+                            </constraints>
+                        </view>
+                        <sections>
+                            <tableViewSection id="MMH-Cj-LEd">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="44" id="bQg-AO-B4e">
+                                        <rect key="frame" x="0.0" y="195" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bQg-AO-B4e" id="m8f-5t-bIf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mobile" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VC7-KV-SKI">
+                                                    <rect key="frame" x="16" y="13.5" width="71" height="16.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iW1-68-Rqi">
+                                                    <rect key="frame" x="111" y="22" width="248" height="0.0"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="iW1-68-Rqi" secondAttribute="trailing" constant="16" id="DDo-4f-ubv"/>
+                                                <constraint firstItem="VC7-KV-SKI" firstAttribute="leading" secondItem="m8f-5t-bIf" secondAttribute="leading" constant="16" id="N3j-GV-OaD"/>
+                                                <constraint firstItem="iW1-68-Rqi" firstAttribute="centerY" secondItem="m8f-5t-bIf" secondAttribute="centerY" id="VYh-kB-NGx"/>
+                                                <constraint firstItem="iW1-68-Rqi" firstAttribute="width" secondItem="VC7-KV-SKI" secondAttribute="width" multiplier="3.5" id="bSW-C2-ypp"/>
+                                                <constraint firstItem="VC7-KV-SKI" firstAttribute="centerY" secondItem="m8f-5t-bIf" secondAttribute="centerY" id="sPZ-lJ-CD2"/>
+                                                <constraint firstItem="iW1-68-Rqi" firstAttribute="leading" secondItem="VC7-KV-SKI" secondAttribute="trailing" constant="24" id="w6t-vv-J2s"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="44" id="dXj-lP-v4j">
+                                        <rect key="frame" x="0.0" y="239" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dXj-lP-v4j" id="Wx0-YC-hI6">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQX-9g-jU6">
+                                                    <rect key="frame" x="16" y="13.5" width="71" height="16.5"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="raE-po-chs">
+                                                    <rect key="frame" x="111" y="22" width="248" height="0.0"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="raE-po-chs" firstAttribute="centerY" secondItem="Wx0-YC-hI6" secondAttribute="centerY" id="2A7-J1-dgr"/>
+                                                <constraint firstItem="raE-po-chs" firstAttribute="leading" secondItem="UQX-9g-jU6" secondAttribute="trailing" constant="24" id="2ou-rU-8OO"/>
+                                                <constraint firstAttribute="trailing" secondItem="raE-po-chs" secondAttribute="trailing" constant="16" id="46N-5Y-fxf"/>
+                                                <constraint firstItem="raE-po-chs" firstAttribute="width" secondItem="UQX-9g-jU6" secondAttribute="width" multiplier="3.5" id="Jeo-hj-Op7"/>
+                                                <constraint firstItem="UQX-9g-jU6" firstAttribute="centerY" secondItem="Wx0-YC-hI6" secondAttribute="centerY" id="a4d-Ma-QQO"/>
+                                                <constraint firstItem="UQX-9g-jU6" firstAttribute="leading" secondItem="Wx0-YC-hI6" secondAttribute="leading" constant="16" id="xsY-fq-Hnp"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="YLJ-JC-unB" id="Moj-hv-QuM"/>
+                            <outlet property="delegate" destination="YLJ-JC-unB" id="pzC-fe-u0v"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MFD-GK-4Bc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="a80-7Q-RO8" customClass="ContactDetailsOutletObject" customModule="ContactsApp" customModuleProvider="target">
+                    <connections>
+                        <outlet property="email" destination="raE-po-chs" id="bYe-TH-UAi"/>
+                        <outlet property="headerView" destination="X1t-2X-Kd6" id="aVj-6k-5xs"/>
+                        <outlet property="mobile" destination="iW1-68-Rqi" id="CjY-I0-MUM"/>
+                    </connections>
+                </customObject>
+            </objects>
+            <point key="canvasLocation" x="389.60000000000002" y="-30.134932533733135"/>
+        </scene>
+        <!--Add Edit Contacts Table View Controller-->
+        <scene sceneID="Jmj-HI-ifM">
+            <objects>
+                <tableViewController storyboardIdentifier="AddEditContactsTVC" id="gfu-vx-hve" customClass="AddEditContactsTableViewController" customModule="ContactsApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="C9a-3j-lvA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="xRE-LJ-olw">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xRE-LJ-olw" id="VsU-L1-dYF">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="gfu-vx-hve" id="dgN-9Q-SN6"/>
+                            <outlet property="delegate" destination="gfu-vx-hve" id="nZM-1P-S2r"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kj2-Tr-zOy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1175" y="-30"/>
         </scene>
     </scenes>
 </document>
